--- a/css/solo.css
+++ b/css/solo.css
@@ -44,7 +44,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 0 !important;
   margin-right: 0 !important;
  }
-  .subtitle { font-size: 1em }
+  .subtitle {
+    font-size: 1em;
+    margin-bottom: 2rem;
+  }
 }
 
 h1 {
