--- a/css/solo.css
+++ b/css/solo.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700);
 
 html {
-  font: 18px/1.6 'Open Sans', sans-serif;
+  font: 20px 'Open Sans', sans-serif;
 }
 .subtitle {
   font-weight: 400;
