--- a/css/solo.css
+++ b/css/solo.css
@@ -1,10 +1,13 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700);
 
 html {
-  font: 20px 'Open Sans', sans-serif;
+  font: 22px/2 'Open Sans', sans-serif;
 }
 .subtitle {
   font-weight: 400;
+}
+p {
+  line-height: 1.2;
 }
 
 @media (max-width: 325px) {
@@ -60,7 +63,7 @@ h1 {
 
 @media (min-width: 30rem) {
   h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 }
 
