--- a/css/solo.css
+++ b/css/solo.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700);
 
 html {
-  font: 22px/2 'Open Sans', sans-serif;
+  font: 18px/1.6 'Open Sans', sans-serif;
 }
 .subtitle {
   font-weight: 400;
@@ -22,6 +22,7 @@ body {
 @media (min-width: 30rem) {
   body {
     margin-top: 2rem;
+    line-height: 1.2;
   }
 }
 
