adjust comment layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     {{ content }}
     </div>
   </article>
-  <div>
+  <div class="commentWrapper">
       {% if page.comments %}
       <div id="disqus_thread"></div>
       <script>
