--- a/css/solo.css
+++ b/css/solo.css
@@ -100,6 +100,10 @@ h2 {
   .subtitle {
     margin-bottom: 3rem;
   }
+  .commentWrapper {
+    width: 60%;
+    margin: auto;
+  }
 }
 
 h3 {
@@ -113,6 +117,10 @@ h3 {
     margin-top: 2.5rem;
     font-size: 2rem;
     margin-bottom: 1.5rem;
+  }
+  .commentWrapper {
+    width: 60%;
+    margin: auto;
   }
 }
 
