--- a/css/solo.css
+++ b/css/solo.css
@@ -28,10 +28,6 @@ body {
   p {
     line-height: 1.5;
   }
-  .commentWrapper {
-    width: 60%;
-    margin: auto;
-  }
 }
 
 a {
@@ -289,4 +285,15 @@ pre > code {
 .sharing-buttons {
 	width: 100%;
 }
-
+@media (min-width: 481px) and (max-width: 768px) {
+  .commentWrapper {
+    width: 80%;
+    margin: auto;
+  }
+}
+@media (min-width: 769px) {
+  .commentWrapper {
+    width: 60%;
+    margin: auto;
+  }
+}
