--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@
    <div class="container">
     <h3>{{ page.title }}</h3>
 
-    {{ content }}
+       {{ post.excerpt }}
      </div>
    </article>
 
