--- a/css/solo.css
+++ b/css/solo.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700&subset=latin-ext);
 
 html {
   font: 22px/2 'Open Sans', sans-serif;
