--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 
   <script src="{{ site.baseurl }}/scripts/jquery.js"></script>
   <link rel="canonical" href="{{ site.url }}" />
+    {% seo %}
 </head>
 <body>
   <article>
