--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/solo.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
+    {% include head.html %}
   {% if site.font-awesome-include %}<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">{% endif %}
   <link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css">
   <script>
@@ -30,8 +31,14 @@
    <div class="container">
     <h1><a href="./">{{ site.tag_text }}</a></h1>
     {{ content }}
-    </div>
+
+       {% raw  %}
+       {% endraw %}
+       {% include sharing.html %}
+
+   </div>
   </article>
+
   <div class="commentWrapper">
       {% if page.comments %}
       <div id="disqus_thread"></div>
