--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,7 @@
     <h1><a href="./">{{ site.tag_text }}</a></h1>
     {{ content }}
 
-       {% raw  %}
-       {% endraw %}
-       {% include sharing.html %}
+
 
    </div>
   </article>
@@ -64,6 +62,9 @@
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
       {% endif %}
+  </div>
+  <div class="sharingButtons">
+  {% include sharing.html %}
   </div>
 <script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>
   <script id="dsq-count-scr" src="//girlscode.disqus.com/count.js" async></script>
