--- a/css/solo.css
+++ b/css/solo.css
@@ -45,14 +45,11 @@ p {
 }
 
 body {
-  margin: 1rem 0 5rem;
+  margin: 0 0 5rem;
   color: #222;
 }
 
 @media (min-width: 30rem) {
-  body {
-    margin-top: 2rem;
-  }
   p {
     line-height: 1.5;
   }
@@ -88,10 +85,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2.1rem;
-  margin-bottom: 4rem;
+  margin: 2rem -2rem 4rem -2rem;
   font-weight: 700;
-  margin-left: -2rem;
-  margin-right: -2rem;
 }
 p {
   line-height: 1.5;
@@ -131,7 +126,6 @@ h2 {
 
 h3 {
   margin: 2rem -2rem 1.75rem -2rem;
-  margin-top: 2rem;
   font-size: 1.75rem;
 }
 
@@ -259,6 +253,11 @@ pre > code {
 .sharing {
  font-size: 85%;
  }
+}
+
+.logo {
+  margin-left: 1rem;
+  float: left;
 }
 
 /* This gets Google to fall into place */
