--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
 {% else %}
-<meta content="{{ site.url }}/assets/img/logo-high-resolution.png" property="og:image">
+<meta content="{{ site.url }}/images/logo.jpg" property="og:image">
 <meta property="og:image:width" content="400" />
-<meta property="og:image:height" content="300" />
+<meta property="og:image:height" content="400" />
 {% endif %}
