--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
       {% else %}
         {{ site.description }}
       {% endif %}">
+<meta content="Image" property="og:image">
 {% if page.image %}
 <meta content="{{ site.url }}/assets/img/posts/{{ page.image }}" property="og:image">
 <meta property="og:image:width" content="400" />
