--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
         {{ site.description }}
       {% endif %}">
 
-<meta content="/images/logo.jpg" property="og:image">
+<meta content="{{ site.url }}/images/logo.jpg" property="og:image">
 <meta property="og:image:width" content="600" />
 <meta property="og:image:height" content="600" />
 
