--- a/css/solo.css
+++ b/css/solo.css
@@ -40,6 +40,13 @@ p {
   margin: 0 auto;
   text-align: center;
 }
+
+.pagination {
+  margin: 5rem 0;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
 @media (max-width: 325px) {
   html { font: 17px/1.6 'Open Sans', sans-serif; }
 }
