--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<link rel="icon" href="/images/logo-small.jpg">
+<link rel="icon" href="/images/icon-logo.png">
 <meta property="og:description"
       content="{% if page.excerpt %}
         {{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}
@@ -6,7 +6,7 @@
         {{ site.description }}
       {% endif %}">
 
-<meta property="og:image" content="{{ site.url }}/images/logo.jpg">
+<meta property="og:image" content="{{ site.url }}/images/logo.png">
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
 
