--- a/css/solo.css
+++ b/css/solo.css
@@ -45,7 +45,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -54,14 +54,14 @@ p {
 }
 
 #logo {
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   border: solid 3px white;
   margin: 5px;
 }
 
 .blog-header a {
-  height: 96px;
+  height: 76px;
 }
 
 .about-section {
@@ -74,8 +74,6 @@ p {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  /*border: solid 3px dimgrey;*/
-
 }
 
 .about-blog-title {
@@ -368,6 +366,9 @@ pre > code {
   }
   p {
     text-align: justify;
+  }
+  .about-section a {
+    font-size: 1.2rem;
   }
 }
 @media (min-width: 481px) and (max-width: 768px) {
