--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,32 +35,14 @@
 
    </div>
   </article>
-  <div class="commentWrapper">
-    {% if page.comments %}
-    <div id="disqus_thread"></div>
-    <script>
-      /**
-       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-       */
-      /*
-       var disqus_config = function () {
-       this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-       this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-       };
-       */
-      (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
-        var d = document, s = d.createElement('script');
+  {% include comments.html %}
 
-        s.src = '//girlscode.disqus.com/embed.js';  // IMPORTANT: Replace EXAMPLE with your forum shortname!
+<div class="subscribe-form">
 
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-    {% endif %}
-  </div>
+{% include subscribe_form.html %}
+
+</div>
+
   <div class="sharingButtons">
   {% include sharing.html %}
   </div>
@@ -76,6 +58,5 @@
 </style>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-
 </body>
 </html>
