--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,16 +12,7 @@
     {% include head.html %}
   {% if site.font-awesome-include %}<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">{% endif %}
   <link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css">
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-85180667-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+  {% include analytics.html %}
   <script src="{{ site.baseurl }}/scripts/jquery.js"></script>
   <link rel="canonical" href="{{ site.url }}" />
     {% seo %}
@@ -35,28 +26,23 @@
 
    </div>
   </article>
-  {% include comments.html %}
+    {% include comments.html %}
 
-<div class="subscribe-form">
+  <div class="subscribe-form">
 
-{% include subscribe_form.html %}
+    {% include subscribe_form.html %}
 
-</div>
+  </div>
 
   <div class="sharingButtons">
   {% include sharing.html %}
   </div>
-<script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>
+  <script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>
   <script id="dsq-count-scr" src="//girlscode.disqus.com/count.js" async></script>
 
 <!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px;}
-  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 </body>
 </html>
